--- a/src/app/bugs/bugs.component.html
+++ b/src/app/bugs/bugs.component.html
@@ -34,8 +34,15 @@
     
     <div class="spotbie-button text-uppercase" (click)="insertBug()">Send</div>
 
+
     <div class="text-uppercase mt-4 text-center" style="font-size: 2rem; color: white;">
         <i class='fa fa-bug'></i>
+    </div>
+
+    <div class="mt-4 mb-4 text-uppercase spotbie-text-gradient">
+        <p>Developer Info</p>
+        <p>admin@spotbie.com</p>
+        <p>Franco N. Petitfour, CEO</p>
     </div>
 
 </div>
