--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -14,7 +14,7 @@
 
     <p class="text-center">    
         
-        <span class="spotbie-text-gradient">from nearby</span>
+        <span class="spotbie-text-gradient">FROM NEARBY</span>
         
         <br/><br/>
         <a class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/business']">SpotBie Community Members</a> 
