--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -1,10 +1,10 @@
 .spotbie-overlay-window{
     z-index: 94;
     overflow-x: hidden;
-    width: 102%;
-    min-width: 102%;
-    max-width: 102%;
-    left: -1%;   
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    left: 0%;  
 }
 .sb-miniLogoIconM{
     position: relative;
@@ -169,7 +169,6 @@
     padding-top: 80px;
     padding-bottom: 150px;
 }
-
 .search-spotbie-categories{
     direction: ltr;
     position: fixed;
@@ -181,7 +180,6 @@
     padding: 5px;
     background-color: white;
 }
-
 .spotbie-single-cat{
     position: relative;
     padding: 15px 38px;
@@ -842,16 +840,16 @@ button.gm-ui-hover-effect:focus-within{
 ::-webkit-scrollbar{
     height: 10px;
     width: 10px;
-    background: transparent;
+    background: #1c1924;
 }
 ::-webkit-scrollbar-thumb{
-    background: linear-gradient(90deg, transparent,transparent);
+    background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 ::-webkit-scrollbar-corner{
-    background: linear-gradient(90deg,transparent,transparent);
+    background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 ::-webkit-scrollbar-button{
-    background: linear-gradient(90deg,transparent,transparent);
+    background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1583px) { 
