--- a/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
@@ -55,11 +55,11 @@
     position: relative;
     margin: 0 auto;
     max-width: 100%;
-    min-height: 300px;
-    height: 300px;
-    max-height: 300px;    
+    min-height: 400px;
+    height: 400px;
+    max-height: 400px;    
     background-repeat: no-repeat!important;
-    background-size: cover!important;
+    background-size: contain !important;
     background-position: center!important; 
 }
 .spotbie-white-iconImg{
@@ -98,10 +98,9 @@
     display: inline-block;
     max-width: 400px;
     min-width: 400px;
-    height: 300px;
-    max-height: 300px;
-    min-height: 300px;
-    height: 300px;    
+    height: 400px;
+    max-height: 400px;
+    min-height: 400px;
     margin-left: 2px;
     margin-right: 2px;     
 }
