--- a/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.html
+++ b/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.html
@@ -8,7 +8,7 @@
 
     <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images  + ')'}" *ngIf="editMode && ad.id != 2"></div>
 
-    <div class='sb-ad-bottom' *ngIf="businessReady">
+    <div class='sb-ad-bottom' *ngIf="businessReady && business !== null">
         
         <span class='spotbie-text-gradient sb-sponsoredName text-uppercase'>{{ business.name }}</span>
 
