--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -164,4 +164,10 @@
     <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
     <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2021</p>
 
+    <div class="mt-4">
+        <i class="fab fa-instagram" (click)="openIg()"></i>
+        <i class="fab fa-twitter" (click)="openTwitter()"></i>
+        <i class="fab fa-youtube" (click)="openYoutube()"></i>
+    </div>
+
 </div>
