--- a/src/app/features/user-features/user-features.component.css
+++ b/src/app/features/user-features/user-features.component.css
@@ -11,3 +11,12 @@
     font-size: 1.8rem;
     color: white;
 }
+.fab.fa-instagram,
+.fab.fa-twitter,
+.fab.fa-youtube{
+    color: white;
+    font-size: 1rem;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
