Added Blog Links

--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -229,6 +229,10 @@
             <i class="fab fa-youtube" (click)="openYoutube()"></i>
         </div>
 
+        <div class="mt-4 text-uppercase spotbie-text-link cursor-pointer">
+            <span (click)="openBlog()">BLOG</span>
+        </div>
+
         <div class="mt-4"></div>
 
         <div class='sb-closeButton' (click)="closeWindowX()">
