--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -180,6 +180,12 @@
       <i class="fab fa-youtube" (click)="openYoutube()"></i>
     </div>
 
+    <div class="mt-4 text-uppercase spotbie-text-link cursor-pointer">
+      <span (click)="openBlog()">BLOG</span>
+    </div>
+
+    <div class="mt-4"></div>
+
     <div class='sb-closeButton' (click)="closeWindow()">
       <i class="fa fa-times"></i>
     </div>
