--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -24,7 +24,7 @@
       </span>
 
       <span (click)="spawnCategories('shopping', false)">
-        SHOPPPING
+        RETAIL
       </span>
 
       <span (click)="spawnCategories('events', false)">
@@ -60,7 +60,7 @@
       </div>
 
       <div (click)="spawnCategories('shopping')">
-        SHOPPING <i class="fa fa-angle-right"></i>
+        RETAIL <i class="fa fa-angle-right"></i>
       </div>
 
       <div (click)="spawnCategories('events')">
