Save Business info pre-verification

--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -427,7 +427,7 @@
                                     chosen_account_type != 4 &&
                                     userIsTrial" 
                             (click)="activateFullMembership()">                        
-                        SKIP TRIAL
+                        END TRIAL
                     </div>
 
                     <div class="mt-4" style="font-size: .8rem;" *ngIf="userIsSubscribed">
