--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <app-loading-screen *ngIf="loading"></app-loading-screen>
 
-<div class="spotbie-overlay-window container" [ngClass]="getCurrentWindowBg()">
+<div class="spotbie-overlay-window d-flex container" [ngClass]="getCurrentWindowBg()">
 
     <div class='sb-scroll'>
 
