--- a/src/app/helpers/scroll-to-top/scroll-to-top.component.css
+++ b/src/app/helpers/scroll-to-top/scroll-to-top.component.css
@@ -19,9 +19,24 @@
 .spotbie-scroll-top:hover i{
     opacity: 1;
 }
-
+.sb-your-news{
+    position: fixed;
+    bottom: 10px;
+    left: 30px;
+    z-index: 95;
+    background-color: #332f3e;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 15px;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.226);    
+}
+.sb-your-news.marginLeft{
+    left: 150px;
+}
 @media (max-width: 460px) { 
-
     .spotbie-scroll-top{
         padding-top: 5px;
         padding-bottom: 5px;
