--- a/src/app/helpers/scroll-to-top/scroll-to-top.component.html
+++ b/src/app/helpers/scroll-to-top/scroll-to-top.component.html
@@ -1,4 +1,4 @@
-<div class="spotbie-scroll-top sb-your-news" 
+<div class="spotbie-scroll-top" 
         (click)="scrollTop()"
          #scrollArrow>
     <i class="fa fa-angle-double-up" aria-hidden="true"></i>
