look over your shoulders homie

--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
@@ -1,6 +1,5 @@
 .spotbie-ad-wrapper-header{
-    position: absolute;
-    right: 2%;
+    position: relative;
     text-align: center;
     margin: 5px auto;
     min-height: 370px;
