--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -162,168 +162,179 @@
 
     <div class='spotbie-search-results' *ngIf="show_search_box && searchResults.length > 0">
 
+      <div class=""></div>
+
       <div #scrollMapAppAnchor></div>
       
-      <app-header-ad-banner #singleAdApp class='spotbie-ad' 
-                              [eventsClassification]="eventsClassification"
-                              [accountType]="searchCategory" 
-                              [categories]="number_categories" 
-                              [lat]="lat" 
-                              [lng]="lng"></app-header-ad-banner>
+      <table class="sb-sorterHead">
+        <tr>
+          <td>
+            <app-header-ad-banner #singleAdApp class='spotbie-ad' 
+                                  [eventsClassification]="eventsClassification"
+                                  [accountType]="searchCategory" 
+                                  [categories]="number_categories" 
+                                  [lat]="lat" 
+                                  [lng]="lng"></app-header-ad-banner>
+          </td>
+        </tr>
+        <tr>
+          <td id="sbSorterHeadTD1">
+            <div class='spotbie-search-results-title text-uppercase' *ngIf="type_of_info_object == 'yelp_business'">
 
-      <div class='spotbie-search-results-title text-uppercase' *ngIf="type_of_info_object == 'yelp_business'">
-
-        Distance {{ maxDistance }} mi.  
-        <mat-slider min="1" max="25" step="1" 
-                    value="{{ maxDistance }}"
-                    (change)="updateDistance($event)"></mat-slider>
-                                                      
-      </div>
-    
-      <div class='spotbie-search-results-title text-uppercase' *ngIf="type_of_info_object == 'ticketmaster_events'">
-
-        Distance  
-        <mat-slider min="1" max="50" step="1" value="{{ maxDistance }}"
-                    (change)="updateDistance($event)"></mat-slider>
-        {{ maxDistance }} mi.              
-
-      </div>
-    
-      <div class='spotbie-search-results-title'>
-    
-        <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'food'">
-          <tr>
-
-            <td (click)="sortBy(0)" title="Sort By Distance">
-              <img src='assets/images/map/distance.svg' />
-            </td>
-
-            <td (click)="sortBy(1)" title="Sort By Rating">
-              <img src='assets/images/map/ratings.svg' />
-            </td>
-            
-            <td (click)="sortBy(2)" title="Sort By Reviews">
-              <img src='assets/images/map/reviews.svg' />
-            </td>
-
-            <td (click)="sortBy(3)" title="Sory By Pricing">
-              <img src='assets/images/map/pricing.svg' />
-            </td>
-            
-            <td (click)="sortBy(4)" title="Offers Delivery">
-              <img class="sb-deliverySortImg"  src='assets/images/map/delivery.svg' />
-            </td>
-            
-            <td (click)="sortBy(5)" title="Offers Pick-Up">
-              <img class="sb-pickUpSortImg"  src='assets/images/map/pick-up.svg' />
-            </td>
-            
-            <td (click)="sortBy(6)" title="Offers Reservations">
-              <img class="sb-reservationsSortImg" src='assets/images/map/reservations.svg' />
-            </td>
-
-          </tr>    
-        </table>
-        
-        <div class="mt-4 mb-4 text-uppercase">
-
-          Sorted by {{ sort_by_txt }} 
-
-          <span *ngIf="sortAc != 4 && sortAc != 5 && sortAc != 6 && sortAc != 7 && sortAc != 8">
-            <i [ngClass]="sortingOrderClass(sorting_order)"></i>
-          </span>
-  
-        </div>
-
-        <table class='spotbie-controls-search-results' 
-                (click)="showOpen()" 
-                title="Opened or Closed" 
-                [ngStyle]="{ 'border-right' : 'unset' }" 
-                *ngIf="searchCategorySorter == 'food'">
+              Distance {{ maxDistance }} mi.  
+              <mat-slider min="1" max="25" step="1" 
+                          value="{{ maxDistance }}"
+                          (change)="updateDistance($event)"></mat-slider>
+                                                            
+            </div>
           
-          <td *ngIf="!isMobile"> 
-            <span class='fa fa-circle spotbie-is-open'></span>
-          </td>
-
-          <td *ngIf="showOpened == false && !isMobile">
-            <span class='fa fa-circle spotbie-is-closed'></span>
-          </td>
-
-          <td *ngIf="showOpened == true">
-            OPEN
-          </td>
-
-          <td *ngIf="showOpened == false">
-            OPEN/CLOSED
-          </td>
-
-        </table>
+            <div class='spotbie-search-results-title text-uppercase' *ngIf="type_of_info_object == 'ticketmaster_events'">
       
-        <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'shopping'">
-          <tr>
-
-            <td (click)="sortBy(0)" title="Sort By Distance">
-              <img src='assets/images/map/distance.svg' />
-            </td>
-
-            <td (click)="sortBy(1)" title="Sort By Rating">
-              <img src='assets/images/map/ratings.svg' />
-            </td>
-
-            <td (click)="sortBy(2)" title="Sort By Reviews">
-              <img src='assets/images/map/reviews.svg' />
-            </td>
-
-            <td (click)="sortBy(3)" [ngStyle]="{ 'border-right' : 'unset' }"  title="Sory By Pricing">
-              <img src='assets/images/map/pricing.svg' />
-            </td> 
-
-          </tr>  
-        </table>
-    
-        <table  class='spotbie-controls-search-results' 
-                (click)="showOpen()" 
-                title="Opened or Closed" 
-                [ngStyle]="{ 'border-right' : 'unset' }" 
-                *ngIf="searchCategorySorter == 'shopping'">
-
-          <td *ngIf="!isMobile"> 
-            <span class='fa fa-circle spotbie-is-open'></span>
-          </td>
-
-          <td *ngIf="showOpened == false && !isMobile">
-            <span class='fa fa-circle spotbie-is-closed'></span>
-          </td>
-
-          <td *ngIf="showOpened == true">
-            OPEN
-          </td>
-
-          <td *ngIf="showOpened == false">
-            OPEN/CLOSED
-          </td>
-        </table>   
+              Distance  
+              <mat-slider min="1" max="50" step="1" value="{{ maxDistance }}"
+                          (change)="updateDistance($event)"></mat-slider>
+              {{ maxDistance }} mi.              
+      
+            </div>
+          
+            <div class='spotbie-search-results-title'>
+          
+              <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'food'">
+                <tr>
+      
+                  <td (click)="sortBy(0)" title="Sort By Distance">
+                    <img src='assets/images/map/distance.svg' />
+                  </td>
+      
+                  <td (click)="sortBy(1)" title="Sort By Rating">
+                    <img src='assets/images/map/ratings.svg' />
+                  </td>
+                  
+                  <td (click)="sortBy(2)" title="Sort By Reviews">
+                    <img src='assets/images/map/reviews.svg' />
+                  </td>
+      
+                  <td (click)="sortBy(3)" title="Sory By Pricing">
+                    <img src='assets/images/map/pricing.svg' />
+                  </td>
+                  
+                  <td (click)="sortBy(4)" title="Offers Delivery">
+                    <img class="sb-deliverySortImg"  src='assets/images/map/delivery.svg' />
+                  </td>
+                  
+                  <td (click)="sortBy(5)" title="Offers Pick-Up">
+                    <img class="sb-pickUpSortImg"  src='assets/images/map/pick-up.svg' />
+                  </td>
+                  
+                  <td (click)="sortBy(6)" title="Offers Reservations">
+                    <img class="sb-reservationsSortImg" src='assets/images/map/reservations.svg' />
+                  </td>
+      
+                </tr>    
+              </table>
+              
+              <div class="mt-4 mb-4 text-uppercase">
+      
+                Sorted by {{ sort_by_txt }} 
+      
+                <span *ngIf="sortAc != 4 && sortAc != 5 && sortAc != 6 && sortAc != 7 && sortAc != 8">
+                  <i [ngClass]="sortingOrderClass(sorting_order)"></i>
+                </span>
         
-        <table class='spotbie-controls-search-results text-uppercase' *ngIf="searchCategorySorter == 'events'">
-          <tr>
-            <td (click)="hideSearchResults()" title="Hide Results"><img src='assets/images/map/hide.svg' /></td>
-            <td (click)="sortBy(0)" title="Sort By Distance"><img src='assets/images/map/distance.svg' /></td>
-            <td (click)="sortBy(3)" title="Sort By Pricing"><img src='assets/images/map/pricing.svg' /></td>
-            <td (click)="sortBy(7)" title="Events Today">Today</td>
-            <td (click)="sortBy(8)" title="Events This Weekend" [ngStyle]="{ 'border-right' : 'unset' }">This Weekend</td>
-          </tr>    
-        </table>
-    
-      </div>
-    
-      <div class='spotbie-search-results-title spotbie-sorting text-uppercase'>
-    
-        <ng-template *ngIf="searchCategorySorter != 'events'">
-          <span class='fa fa-circle spotbie-is-open' [ngStyle]="{ 'margin-left' : '5px' }"></span>
-          <span class='fa fa-circle spotbie-is-closed' *ngIf="showOpened == false" [ngStyle]="{ 'margin-left' : '5px' }"></span>
-        </ng-template>
-    
-      </div>      
+              </div>
+      
+              <table class='spotbie-controls-search-results' 
+                      (click)="showOpen()" 
+                      title="Opened or Closed" 
+                      [ngStyle]="{ 'border-right' : 'unset' }" 
+                      *ngIf="searchCategorySorter == 'food'">
+                
+                <td *ngIf="!isMobile"> 
+                  <span class='fa fa-circle spotbie-is-open'></span>
+                </td>
+      
+                <td *ngIf="showOpened == false && !isMobile">
+                  <span class='fa fa-circle spotbie-is-closed'></span>
+                </td>
+      
+                <td *ngIf="showOpened == true">
+                  OPEN
+                </td>
+      
+                <td *ngIf="showOpened == false">
+                  OPEN/CLOSED
+                </td>
+      
+              </table>
+            
+              <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'shopping'">
+                <tr>
+      
+                  <td (click)="sortBy(0)" title="Sort By Distance">
+                    <img src='assets/images/map/distance.svg' />
+                  </td>
+      
+                  <td (click)="sortBy(1)" title="Sort By Rating">
+                    <img src='assets/images/map/ratings.svg' />
+                  </td>
+      
+                  <td (click)="sortBy(2)" title="Sort By Reviews">
+                    <img src='assets/images/map/reviews.svg' />
+                  </td>
+      
+                  <td (click)="sortBy(3)" [ngStyle]="{ 'border-right' : 'unset' }"  title="Sory By Pricing">
+                    <img src='assets/images/map/pricing.svg' />
+                  </td> 
+      
+                </tr>  
+              </table>
+          
+              <table  class='spotbie-controls-search-results' 
+                      (click)="showOpen()" 
+                      title="Opened or Closed" 
+                      [ngStyle]="{ 'border-right' : 'unset' }" 
+                      *ngIf="searchCategorySorter == 'shopping'">
+      
+                <td *ngIf="!isMobile"> 
+                  <span class='fa fa-circle spotbie-is-open'></span>
+                </td>
+      
+                <td *ngIf="showOpened == false && !isMobile">
+                  <span class='fa fa-circle spotbie-is-closed'></span>
+                </td>
+      
+                <td *ngIf="showOpened == true">
+                  OPEN
+                </td>
+      
+                <td *ngIf="showOpened == false">
+                  OPEN/CLOSED
+                </td>
+              </table>   
+              
+              <table class='spotbie-controls-search-results text-uppercase' *ngIf="searchCategorySorter == 'events'">
+                <tr>
+                  <td (click)="hideSearchResults()" title="Hide Results"><img src='assets/images/map/hide.svg' /></td>
+                  <td (click)="sortBy(0)" title="Sort By Distance"><img src='assets/images/map/distance.svg' /></td>
+                  <td (click)="sortBy(3)" title="Sort By Pricing"><img src='assets/images/map/pricing.svg' /></td>
+                  <td (click)="sortBy(7)" title="Events Today">Today</td>
+                  <td (click)="sortBy(8)" title="Events This Weekend" [ngStyle]="{ 'border-right' : 'unset' }">This Weekend</td>
+                </tr>    
+              </table>
+          
+            </div>
+          
+            <div class='spotbie-search-results-title spotbie-sorting text-uppercase'>
+          
+              <ng-template *ngIf="searchCategorySorter != 'events'">
+                <span class='fa fa-circle spotbie-is-open' [ngStyle]="{ 'margin-left' : '5px' }"></span>
+                <span class='fa fa-circle spotbie-is-closed' *ngIf="showOpened == false" [ngStyle]="{ 'margin-left' : '5px' }"></span>
+              </ng-template>
+          
+            </div>  
+          </td>          
+        </tr>
+      </table>    
 
       <div class='spotbie-search-result-wrapper' *ngIf="showSearchResults">
     
@@ -464,7 +475,7 @@
         </div>
         
         <!--Page Number Wrapper -->
-        <div class='mt-5 pb-5'>
+        <div class='mt-5 pb-5' style="text-align: center;">
 
           <span class='sb-page-button text-uppercase cursor-pointer' (click)="goToPage(1)" *ngIf="allPages > 1">
             <i class="fa fa-angle-double-left"></i>
