--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
@@ -54,9 +54,8 @@
 .spotbie-ad-image{
     position: relative;
     margin: 0 auto;
-    min-height: 400px;
-    height: 400px;
-    max-height: 400px;
+    min-width: 100%;
+    height: auto;
     background-repeat: no-repeat!important;
     background-size: contain!important;
     background-position: center!important;
