--- a/src/styles.css
+++ b/src/styles.css
@@ -717,7 +717,10 @@ hr{
 .mat-slider.mat-slider-horizontal .mat-slider-track-fill {
     background: linear-gradient(90deg,#35a99f,#64e56f);
 }
-.mat-accent .mat-slider-thumb {
+
+.mat-slider.mat-accent .mat-slider-track-fill, 
+.mat-slider.mat-accent .mat-slider-thumb, 
+.mat-slider.mat-accent .mat-slider-thumb-label {
     background-color: #332f3e;
 }
 .spotbie-ad-wrapper a, 
