Fixed [src] attribute on header banner.

--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.html
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.html
@@ -7,7 +7,7 @@
 
     <img class="spotbie-ad-image" [src]="ad.images" *ngIf="!editMode && isDesktop" />
 
-    <img class="spotbie-ad-image" [src="ad.images_mobile" *ngIf="!editMode && !isDesktop" />
+    <img class="spotbie-ad-image" [src]="ad.images_mobile" *ngIf="!editMode && !isDesktop" />
 
     <img class="spotbie-ad-image" [src]="genericAdImage" *ngIf="editMode && ad.id == 2 && isDesktop" />
 
